@@ -1,0 +1,11 @@
+package Example::Dialect2::SpanParser;
+
+use strict;
+use warnings;
+use namespace::autoclean;
+
+use Moose::Role;
+
+with 'Markdent::Role::Dialect::SpanParser';
+
+1;
